# job_tracker

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  coverage.yml
scripts/: README.md  ci.sh
src/: db.rs  error.rs  lib.rs  main.rs  model.rs  ui.rs
tests/: integration_tests.rs  test_persistence.rs
tests/common/: mod.rs
